@@ -6,7 +6,7 @@ pkginclude_HEADERS = gsl_multiroots.h
 
 noinst_HEADERS = enorm.c dogleg.c
 
-INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../linalg -I$(srcdir)/../matrix -I$(srcdir)/../vector -I$(srcdir)/../block -I$(srcdir)/../ieee-utils -I$(srcdir)/../err
+INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../linalg -I$(srcdir)/../permutation -I$(srcdir)/../matrix -I$(srcdir)/../vector -I$(srcdir)/../block -I$(srcdir)/../ieee-utils -I$(srcdir)/../err
 
 libgslmultiroots_a_SOURCES = fdjac.c fsolver.c fdfsolver.c convergence.c  newton.c gnewton.c dnewton.c broyden.c hybrid.c hybridj.c
 
