@@ -1,3 +1,8 @@
+Wed Feb 16 21:13:24 2000  Brian Gough  <bjg@network-theory.co.uk>
+
+	* fixed Makefiles that include gsl_linalg.h to add
+ 	-I$(srcdir)/../permutation to their include path
+
 Tue Feb 15 18:55:05 2000  Brian Gough  <bjg@network-theory.co.uk>
 
 	* added directory for permutation objects, permutation/
